Fix margin issues. Add more context to location pins on mobile.

--- a/src/components/Homeowners/homeowners.scss
+++ b/src/components/Homeowners/homeowners.scss
@@ -2,22 +2,25 @@
 
 .homeowners-container {
     background-color: $dark-green-3;
-    height: 100vh;
-    padding: 15vh 0;
+    min-height: 100vh;
+    padding: 120px 0;
+
+    @media #{$grid-sm} {
+        padding: 120px 24px;
+    }
 
     @media #{$grid-xs} {
-        padding: 15vh 16px;
+        padding: 120px 16px;
     }
 
     @media #{$grid-xxs} {
-        padding: 25vh 10px;
+        padding: 180px 12px;
     }
 
-    @media #{$grid-xxxs} {
-        padding: 24vh 10px;
-    }
-    @media #{$grid-xxxxs} {
-        padding: 28vh 10px;
+    .container {
+        @media #{$grid-xxs, $grid-xs, $grid-sm} {
+            max-width: none;
+        }
     }
 }
 
